--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: default
     
     <figure class="col-sm-6">
 			<p>Words</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg">
+      <img src="/assets/alisa-mulder-402671-unsplash.jpg">
     </figure>
     
     <figure class="col-sm-6">
